<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="gps_button">Log GPS</string>
    <string name="reset_button">Reset</string>
    <string name="email_button">Email</string>
    <string name="clear_button">Clear</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Long:</string>
    <string name="instructions">Click button for Logitude and Latitude.</string> 

</resources>